qmlui: integrate Russian translation (thanks to Aleksandr Gusarov)

--- a/resources/icons/svg/svgicons.qrc
+++ b/resources/icons/svg/svgicons.qrc
@@ -66,6 +66,7 @@
     <file alias="flag_it.svg">flag_it.svg</file>
     <file alias="flag_jp.svg">flag_jp.svg</file>
     <file alias="flag_nl.svg">flag_nl.svg</file>
+    <file alias="flag_ru.svg">flag_ru.svg</file>
     <file alias="flag_uk_us.svg">flag_uk_us.svg</file>
     <file alias="flash.svg">flash.svg</file>
     <file alias="flower.svg">flower.svg</file>
