--- a/qmlui/qmlui.qrc
+++ b/qmlui/qmlui.qrc
@@ -233,6 +233,9 @@
 
     <!-- Fixture Definition Editor -->
     <file alias="FixtureEditor.qml">qml/fixtureeditor/FixtureEditor.qml</file>
+    <file alias="EditorView.qml">qml/fixtureeditor/EditorView.qml</file>
+    <file alias="PhysicalProperties.qml">qml/fixtureeditor/PhysicalProperties.qml</file>
+    <file alias="ChannelEditor.qml">qml/fixtureeditor/ChannelEditor.qml</file>
 
     <!-- JavaScript helpers -->
     <file alias="CanvasDrawFunctions.js">js/CanvasDrawFunctions.js</file>
