resources: add fanning icons

--- a/resources/icons/svg/svgicons.qrc
+++ b/resources/icons/svg/svgicons.qrc
@@ -3,6 +3,11 @@
     <file alias="2dview.svg">2dview.svg</file>
     <file alias="3dview.svg">3dview.svg</file>
     <file alias="add.svg">add.svg</file>
+    <file alias="algo-flat.svg">algo-flat.svg</file>
+    <file alias="algo-linear.svg">algo-linear.svg</file>
+    <file alias="algo-saw.svg">algo-saw.svg</file>
+    <file alias="algo-sine.svg">algo-sine.svg</file>
+    <file alias="algo-square.svg">algo-square.svg</file>
     <file alias="align-bottom.svg">align-bottom.svg</file>
     <file alias="align-left.svg">align-left.svg</file>
     <file alias="align-right.svg">align-right.svg</file>
@@ -54,6 +59,7 @@
     <file alias="effect.svg">effect.svg</file>
     <file alias="efx.svg">efx.svg</file>
     <file alias="fan.svg">fan.svg</file>
+    <file alias="fanning.svg">fanning.svg</file>
     <file alias="filenew.svg">filenew.svg</file>
     <file alias="fileopen.svg">fileopen.svg</file>
     <file alias="filesave.svg">filesave.svg</file>
