--- a/fixtureeditor/editmode.ui
+++ b/fixtureeditor/editmode.ui
@@ -53,38 +53,6 @@
        <string>Channels</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_8">
-       <item row="0" column="0" rowspan="5">
-        <widget class="QTreeWidget" name="m_channelList">
-         <property name="alternatingRowColors">
-          <bool>true</bool>
-         </property>
-         <property name="iconSize">
-          <size>
-           <width>24</width>
-           <height>24</height>
-          </size>
-         </property>
-         <property name="rootIsDecorated">
-          <bool>false</bool>
-         </property>
-         <property name="itemsExpandable">
-          <bool>false</bool>
-         </property>
-         <property name="allColumnsShowFocus">
-          <bool>true</bool>
-         </property>
-         <column>
-          <property name="text">
-           <string>Number</string>
-          </property>
-         </column>
-         <column>
-          <property name="text">
-           <string>Name</string>
-          </property>
-         </column>
-        </widget>
-       </item>
        <item row="0" column="1">
         <widget class="QToolButton" name="m_addChannelButton">
          <property name="toolTip">
@@ -96,6 +64,26 @@
          <property name="icon">
           <iconset resource="../ui/src/qlcui.qrc">
            <normaloff>:/edit_add.png</normaloff>:/edit_add.png</iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>32</width>
+           <height>32</height>
+          </size>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="1">
+        <widget class="QToolButton" name="m_lowerChannelButton">
+         <property name="toolTip">
+          <string>Lower the selected channel</string>
+         </property>
+         <property name="text">
+          <string notr="true">...</string>
+         </property>
+         <property name="icon">
+          <iconset resource="../ui/src/qlcui.qrc">
+           <normaloff>:/down.png</normaloff>:/down.png</iconset>
          </property>
          <property name="iconSize">
           <size>
@@ -145,27 +133,47 @@
          </property>
         </widget>
        </item>
-       <item row="3" column="1">
-        <widget class="QToolButton" name="m_lowerChannelButton">
-         <property name="toolTip">
-          <string>Lower the selected channel</string>
-         </property>
-         <property name="text">
-          <string notr="true">...</string>
-         </property>
-         <property name="icon">
-          <iconset resource="../ui/src/qlcui.qrc">
-           <normaloff>:/down.png</normaloff>:/down.png</iconset>
+       <item row="0" column="0" rowspan="6">
+        <widget class="QTreeWidget" name="m_channelList">
+         <property name="alternatingRowColors">
+          <bool>true</bool>
          </property>
          <property name="iconSize">
           <size>
-           <width>32</width>
-           <height>32</height>
+           <width>24</width>
+           <height>24</height>
           </size>
          </property>
+         <property name="rootIsDecorated">
+          <bool>false</bool>
+         </property>
+         <property name="itemsExpandable">
+          <bool>false</bool>
+         </property>
+         <property name="allColumnsShowFocus">
+          <bool>true</bool>
+         </property>
+         <property name="columnCount">
+          <number>3</number>
+         </property>
+         <column>
+          <property name="text">
+           <string>Number</string>
+          </property>
+         </column>
+         <column>
+          <property name="text">
+           <string>Name</string>
+          </property>
+         </column>
+         <column>
+          <property name="text">
+           <string>Acts On</string>
+          </property>
+         </column>
         </widget>
        </item>
-       <item row="4" column="1">
+       <item row="5" column="1">
         <spacer>
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -177,6 +185,26 @@
           </size>
          </property>
         </spacer>
+       </item>
+       <item row="4" column="1">
+        <widget class="QToolButton" name="m_actsOnChannelButton">
+         <property name="toolTip">
+          <string>Set acts on channel</string>
+         </property>
+         <property name="text">
+          <string>...</string>
+         </property>
+         <property name="icon">
+          <iconset resource="../ui/src/qlcui.qrc">
+           <normaloff>:/pan.png</normaloff>:/pan.png</iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>32</width>
+           <height>32</height>
+          </size>
+         </property>
+        </widget>
        </item>
       </layout>
      </widget>
